--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "node": "^16.3.0"
+    "node": "^16.3.0",
+    "winston": "^3.3.3"
   }
 }
