--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Cameron Tacklind <cameron@tacklind.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/command-line-args": "^5.0.0",
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
@@ -21,6 +22,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "command-line-args": "^5.1.1",
     "node": "^16.3.0",
     "winston": "^3.3.3"
   }
