--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "decode",
   "scripts": {
     "start": "ts-node main.ts",
-    "dev": "nodemon main.ts"
+    "dev": "nodemon main.ts --"
   },
   "author": "Cameron Tacklind <cameron@tacklind.com>",
   "license": "ISC",
