--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "nodemon": "^2.0.7",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
