--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "decode",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "dev": "nodemon src/main.ts --"
+    "dev": "ts-node-dev --rs --respawn src/main.ts --"
   },
   "author": "Cameron Tacklind <cameron@tacklind.com>",
   "license": "ISC",
@@ -16,10 +16,10 @@
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
-    "nodemon": "^2.0.7",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.4"
   },
   "dependencies": {
