--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "ts-node src/main.ts",
     "dev": "ts-node-dev --rs --respawn src/main.ts --"
   },
+  "engines": {
+    "node": ">=8.0.0",
+    "npm": ">=7.0.0"
+  },
   "dependencies": {
     "command-line-args": "^5.1.1",
     "node": "^16.3.0",
